new shapes are added to tsconfig.

--- a/packages/maker.js/tsconfig.json
+++ b/packages/maker.js/tsconfig.json
@@ -90,6 +90,6 @@
     "src/models/RadialDots.ts",
     "src/models/CornerDots.ts",
     "src/models/EdgeDots.ts",
-    "src/models/CustomDot.ts",
+    "src/models/CustomDot.ts"
   ]
 }
