manager is added build is updated.

--- a/packages/maker.js/tsconfig.json
+++ b/packages/maker.js/tsconfig.json
@@ -44,6 +44,7 @@
     "src/core/pdf.ts",
     "src/core/svg.ts",
     "src/core/layout.ts",
+    "src/core/manager.ts",
     "src/models/BezierCurve.ts",
     "src/models/Ellipse.ts",
     "src/models/ConnectTheDots.ts",
