--- a/packages/maker.js/tsconfig.json
+++ b/packages/maker.js/tsconfig.json
@@ -45,6 +45,7 @@
     "src/core/svg.ts",
     "src/core/layout.ts",
     "src/core/manager.ts",
+    "src/core/dimention.ts",
     "src/models/BezierCurve.ts",
     "src/models/Ellipse.ts",
     "src/models/ConnectTheDots.ts",
@@ -91,6 +92,8 @@
     "src/models/RadialDots.ts",
     "src/models/CornerDots.ts",
     "src/models/EdgeDots.ts",
+    "src/models/SimpleArrow.ts",
+    "src/models/ArrowLine.ts",
     "src/models/CustomDot.ts"
   ]
 }
