Grid functionality is added

--- a/packages/maker.js/tsconfig.json
+++ b/packages/maker.js/tsconfig.json
@@ -94,6 +94,7 @@
     "src/models/EdgeDots.ts",
     "src/models/SimpleArrow.ts",
     "src/models/ArrowLine.ts",
-    "src/models/CustomDot.ts"
+    "src/models/CustomDot.ts",
+    "src/models/Grid.ts",
   ]
 }
