Dxf parser is added

--- a/packages/maker.js/tsconfig.json
+++ b/packages/maker.js/tsconfig.json
@@ -5,6 +5,7 @@
     "sourceMap": true,
     "types": [
         "dxf-parser-typings/dxf-parser",
+        "dxf-parser",
       "@danmarshall/jscad-typings",
       "bezier-js",
       "graham_scan",
