--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "licensify": "^3.1.3",
     "mocha": "^10.0.0",
     "opentype.js": "^1.1.0",
+    "through2": "^4.0.2",
     "typescript": "^4.1.3",
     "typescript-json-schema": "^0.53.1"
   },
@@ -35,5 +36,8 @@
   "bugs": {
     "url": "https://github.com/Microsoft/maker.js/issues"
   },
-  "homepage": "https://github.com/Microsoft/maker.js#readme"
+  "homepage": "https://github.com/Microsoft/maker.js#readme",
+  "dependencies": {
+    "dxf-parser": "^1.1.2"
+  }
 }
