DxfModel is added

--- a/packages/maker.js/tsconfig.json
+++ b/packages/maker.js/tsconfig.json
@@ -49,7 +49,8 @@
     "src/core/dimention.ts",
     "src/core/shaper.ts",
     "src/core/fontData.ts",
-    "../src/core/fontmanager.ts",
+    "src/core/fontmanager.ts",
+    "src/core/shapeIcons.ts",
     "src/models/BezierCurve.ts",
     "src/models/Ellipse.ts",
     "src/models/ConnectTheDots.ts",
@@ -102,5 +103,6 @@
     "src/models/Grid.ts",
     "src/models/Line.ts",
     "src/models/TextModel.ts",
+    "src/models/DxfModel.ts",
   ]
 }
